Adds button docs + hover config to docs

--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -21,3 +21,8 @@
   align-items: center;
   justify-content: center;
 }
+.buttonFlex {
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+}
